--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="Sources\Teleportator.h" />
     <ClInclude Include="Sources\Testmob.h" />
     <ClInclude Include="Sources\Text.h" />
+    <ClInclude Include="Sources\TextInput.h" />
     <ClInclude Include="Sources\TileInt.h" />
     <ClInclude Include="Sources\Turf.h" />
     <ClInclude Include="Sources\TypelistOfItems.h" />
