--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -300,6 +300,9 @@
     <ClInclude Include="Sources\View.h">
       <Filter>Header Files\Sprites</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Slot.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
