--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,43 @@ ipch
 /Release/*.obj
 /Release/mainmap
 Release Fast
+/Exec/KVEngine.exe
+/Exec/KVEngine.pdb
+/Exec/OpenAL32.dll
+/Exec/SDL.dll
+/Exec/SDL_gfx.dll
+/Exec/SDL_image.dll
+/Exec/SDL_net.dll
+/Exec/SDL_ttf.dll
+/Exec/Saves/1save1000
+/Exec/Saves/1save1100
+/Exec/Saves/1save500
+/Exec/Saves/1save600
+/Exec/Saves/1save700
+/Exec/Saves/1save800
+/Exec/Saves/1save900
+/Exec/Saves/debugsave0
+/Exec/Saves/debugsave100
+/Exec/Saves/debugsave1000
+/Exec/Saves/debugsave200
+/Exec/Saves/debugsave300
+/Exec/Saves/debugsave400
+/Exec/Saves/debugsave500
+/Exec/Saves/debugsave600
+/Exec/Saves/debugsave700
+/Exec/Saves/debugsave800
+/Exec/Saves/debugsave900
+/Exec/dbghelp.dll
+/Exec/errorfile.txt
+/Exec/jpeg.dll
+/Exec/libfreetype-6.dll
+/Exec/libfreetype.dll
+/Exec/libpng12-0.dll
+/Exec/libpng16.dll
+/Exec/libsndfile-1.dll
+/Exec/libtiff-3.dll
+/Exec/msvcp100.dll
+/Exec/sfml-audio-2.dll
+/Exec/sfml-system-2.dll
+/Exec/vld_x86.dll
+/Exec/zlib1.dll
