--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="Sources\Firebullet.h" />
     <ClInclude Include="Sources\FireEffect.h" />
     <ClInclude Include="Sources\Floor.h" />
+    <ClInclude Include="Sources\FloorTile.h" />
     <ClInclude Include="Sources\Glass.h" />
     <ClInclude Include="Sources\GLSprite.h" />
     <ClInclude Include="Sources\Grille.h" />
@@ -108,6 +109,7 @@
     <ClCompile Include="Sources\Firebullet.cpp" />
     <ClCompile Include="Sources\FireEffect.cpp" />
     <ClCompile Include="Sources\Floor.cpp" />
+    <ClCompile Include="Sources\FloorTile.cpp" />
     <ClCompile Include="Sources\Glass.cpp" />
     <ClCompile Include="Sources\GLSprite.cpp" />
     <ClCompile Include="Sources\Grille.cpp" />
