--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="Sources\FireEffect.h" />
     <ClInclude Include="Sources\Floor.h" />
     <ClInclude Include="Sources\FloorTile.h" />
+    <ClInclude Include="Sources\Girder.h" />
     <ClInclude Include="Sources\Glass.h" />
     <ClInclude Include="Sources\GLSprite.h" />
     <ClInclude Include="Sources\Grille.h" />
@@ -112,6 +113,7 @@
     <ClCompile Include="Sources\FireEffect.cpp" />
     <ClCompile Include="Sources\Floor.cpp" />
     <ClCompile Include="Sources\FloorTile.cpp" />
+    <ClCompile Include="Sources\Girder.cpp" />
     <ClCompile Include="Sources\Glass.cpp" />
     <ClCompile Include="Sources\GLSprite.cpp" />
     <ClCompile Include="Sources\Grille.cpp" />
