--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -321,6 +321,9 @@
     <ClInclude Include="Sources\Materials.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Girder.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -522,6 +525,9 @@
       <Filter>Source Files\Space</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Materials.cpp">
+      <Filter>Source Files\Space</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Girder.cpp">
       <Filter>Source Files\Space</Filter>
     </ClCompile>
   </ItemGroup>
