--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp" />
     <ClCompile Include="Sources\ASpritesClass.cpp" />
+    <ClCompile Include="Sources\Atmos.cpp" />
     <ClCompile Include="Sources\AtmosHolder.cpp" />
     <ClCompile Include="Sources\CAliveMob.cpp" />
     <ClCompile Include="Sources\Chat.cpp" />
