--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -333,6 +333,9 @@
     <ClInclude Include="Sources\ElectricTools.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Human.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -547,6 +550,9 @@
     </ClCompile>
     <ClCompile Include="Sources\ImageLoader.cpp">
       <Filter>Source Files\Sprites</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Human.cpp">
+      <Filter>Source Files\Space</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
