use cmake for build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(LOKI_DIR third_party/loki-0.1.7/include/loki)
 FIND_PACKAGE(Qt5Network REQUIRED)
 FIND_PACKAGE(Qt5Core REQUIRED)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
-find_package(Qt5OpenGL REQUIRED)
+FIND_PACKAGE(Qt5OpenGL REQUIRED)
 FIND_PACKAGE(SDL REQUIRED)
 FIND_PACKAGE(SDL_ttf REQUIRED)
 FIND_PACKAGE(SDL_image REQUIRED)
@@ -24,10 +24,16 @@ INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_TTF_INCLUDE_DIR})
 
+INCLUDE_DIRECTORIES("Sources")
+
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES($ENV{SFML_INCLUDE_DIR})
 INCLUDE_DIRECTORIES($ENV{ZLIB_INCLUDE_DIR})
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+ENDIF()
 
 FILE(GLOB SOURCES "${SOURCE_DIR}*.cpp")
 FILE(GLOB HEADERS "${SOURCE_DIR}*.h")
@@ -50,12 +56,24 @@ TARGET_LINK_LIBRARIES(KVEngine ${SDL_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_IMAGE_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_TTF_LIBRARY})
 
-TARGET_LINK_LIBRARIES(KVEngine $ENV{SDL_NET_LIBRARIES})
-TARGET_LINK_LIBRARIES(KVEngine $ENV{PNG_LIBRARY})
-TARGET_LINK_LIBRARIES(KVEngine $ENV{ZLIB_LIBRARY})
-TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_LIBRARY})
-TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_AUDIO_LIBRARY})
+IF(WIN32)
+    TARGET_LINK_LIBRARIES(KVEngine $ENV{SDL_NET_LIBRARIES})
+    TARGET_LINK_LIBRARIES(KVEngine $ENV{PNG_LIBRARY})
+    TARGET_LINK_LIBRARIES(KVEngine $ENV{ZLIB_LIBRARY})
+    TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_LIBRARY})
+    TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_AUDIO_LIBRARY})
 
-TARGET_LINK_LIBRARIES(KVEngine opengl32)
+    TARGET_LINK_LIBRARIES(KVEngine opengl32)
+
+ELSE()
+    TARGET_LINK_LIBRARIES(KVEngine SDL_net)
+    TARGET_LINK_LIBRARIES(KVEngine png)
+    TARGET_LINK_LIBRARIES(KVEngine z)
+    TARGET_LINK_LIBRARIES(KVEngine sfml-system)
+    TARGET_LINK_LIBRARIES(KVEngine sfml-audio)
+
+    TARGET_LINK_LIBRARIES(KVEngine GL)
+
+ENDIF()
 
 INSTALL(TARGETS KVEngine RUNTIME DESTINATION C:/Users/my/Documents/Qt/KVEngineQt/Exec)
